2003-03-06  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* Version 0.0.1

	* Initial alpha release.
